c4prj2_input/grade.txt
Grading at Tue Mar  9 09:07:25 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:25: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
   fc->decks[fc->n_decks]->cards = ptr;
                         ^
Compilation of future.c failed

Overall Grade: F
